--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Furkan Karakaş | Personal Website</title>
+    <script src="https://smtpjs.com/v3/smtp.js" defer></script>
+    <script type="module" src="/src/main.jsx" defer></script>
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
