--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Furkan Karakaş | Personal Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    />
     <script src="https://smtpjs.com/v3/smtp.js" defer></script>
     <script type="module" src="/src/main.jsx" defer></script>
   </head>
