--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="The personal website of Furkan Karakaş" />
+    <meta
+      name="keywords"
+      content="Furkan Karakaş, JavaScript, React.js, software, personal website, blog"
+    />
+    <meta name="author" content="Furkan Karakaş" />
     <title>Furkan Karakaş | Personal Website</title>
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
