Google site verification

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       content="Furkan Karakaş, JavaScript, React.js, software, personal website, blog"
     />
     <meta name="author" content="Furkan Karakaş" />
+    <meta
+      name="google-site-verification"
+      content="nR8XD7oC7N_5lkf6dLAGi9Ku15qarIk9fYs8QzrvHAY"
+    />
     <title>Furkan Karakaş | Personal Website</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
