--- a/404.html
+++ b/404.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="The personal website of Furkan Karakaş" />
+    <meta
+      name="description"
+      content="Hello there, My name is Furkan! I am a software engineer, and my preferred programming languages of choices are Java, JavaScript and Python. This is my personal website written with the front-end JavaScript library React.js. Feel free to look around!"
+    />
     <meta
       name="keywords"
       content="Furkan Karakaş, JavaScript, React.js, software, personal website, blog"
